# lpmini2024

./: .cursor.json  .cursorrules  .gitignore  .lintstagedrc.all.json  .lintstagedrc.fast.json  .prettierignore  .prettierrc  ANALYZER_FINAL_SUMMARY.md  ANALYZER_IMPLEMENTATION.md  ANALYZER_TEST_SUMMARY.md  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  rustfmt.toml  test.toml  test_ops  turbo.jsonc
apps/lp-debug/: Cargo.toml  LPS_COMPILE.md
apps/lp-debug/.cargo/: config.toml
apps/lp-debug/src/: bench.rs  lib.rs  lp_data_demo_cli.rs  lpa_format.rs  lps_compile.rs  profile.rs  visualizer.rs
apps/lp-schema-gen/: Cargo.toml
apps/lp-schema-gen/src/: main.rs  registry.rs  zod_gen.rs
apps/lp-schema-gen/src/types/: lfo_config.rs  mod.rs  ui_slider.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: lib.rs
crates/engine-core/src/image/: grey.rs  mod.rs  rgb.rs
crates/engine-core/src/test_engine/: demo_program.rs  mapping_tests.rs  mod.rs  palette.rs  pipeline_tests.rs  power_limit.rs  scene.rs  test_scene.rs
crates/lp-alloc/: Cargo.toml
crates/lp-alloc/src/: allocator.rs  error.rs  lib.rs
crates/lp-data/: Cargo.toml  DESIGN.md  HUMAN_NOTES.md  HUMAN_TODO.md  NOTES.md  README.md
crates/lp-data/src/: alloc.rs  annotation.rs  custom_types.rs  lib.rs  memory.rs  metadata.rs  registry.rs  registry_old.rs  schema.rs  ty.rs  value.rs
crates/lp-data/src/kind/: kind.rs  mod.rs  primitives.rs  shape.rs  value.rs
crates/lp-data/src/metadata/: array.rs  enum.rs  mod.rs  option.rs  record.rs  scalar.rs  vec2.rs  vec3.rs  vec4.rs
crates/lp-data/src/registry/: mod.rs  runtime_registry.rs  static_registry.rs
crates/lp-data/src/shape/: kind.rs  mod.rs  shape.rs  shape_ref.rs  value.rs
crates/lp-data/src/tests/: config_test.rs  mod.rs  runtime_scene_test.rs  value_test.rs
crates/lp-data/src/types/: mod.rs
crates/lp-gfx/: Cargo.toml  README.md
crates/lp-gfx/src/: lib.rs
crates/lp-gfx/src/gfx/: gfx_context.rs  gfx_error.rs  mod.rs  shader_ref.rs  texture_format.rs  texture_ref.rs
crates/lp-gfx/src/lp_script/: mod.rs  sin_table.rs
crates/lp-gfx/tests/: basic_test.rs
crates/lp-gfx/tests/util/: mod.rs
crates/lp-pool/: Cargo.toml  README.md  TODO.md
crates/lp-pool/src/: allocator.rs  allocator_store.rs  block_header.rs  collections.rs  error.rs  fmt.rs  guarded_alloc.rs  lib.rs  memory_pool.rs  pool.rs  state.rs
crates/lp-pool/src/allocator_store/: guards.rs  meta.rs  mod.rs  storage.rs
crates/lp-pool/src/collections/: alloc_meta.rs  btree_map.rs  mod.rs  pool_box.rs  pool_box_dyn.rs  string.rs  tracking.rs  vec.rs
crates/lp-pool/src/pool/: allocate.rs  allocator.rs  coalesce.rs  deallocate.rs  mod.rs  resize.rs  stats.rs
crates/lp-pool/src/tests/: integration.rs  mod.rs  panic_safety.rs
crates/lp-scene/: AGENT_NOTES.md  Cargo.toml  README.md
crates/lp-scene/src/: lib.rs  scene.rs  scene_config.rs  scene_test.rs
crates/lp-scene/src/node/: mod.rs  node.rs
crates/lp-scene/src/nodes/: mod.rs
crates/lp-script/: Cargo.toml  README.md
crates/lp-script/src/: lib.rs  sin_table.rs
crates/lp-script/src/compiler/: analyzer.rs  analyzer_integration_tests.rs  ast.rs  error.rs  lexer.rs  parser.rs  symbol_table.rs  test_ast.rs  typechecker.rs
crates/lp-script/src/math/: advanced.rs  mod.rs  trig.rs  vec2.rs  vec4.rs
crates/lp-script/src/shared/: span.rs  type_info.rs
crates/lp-script/src/vm/: call_stack.rs  error.rs  local_stack.rs  lps_program.rs  lps_vm.rs  mod.rs  value_stack.rs  vm_dispatch.rs  vm_limits.rs
crates/lpcore/: Cargo.toml
crates/lpcore/src/: entities.rs  entity.rs  expr.rs  lib.rs  path.rs  scene.rs
crates/lpcore/src/entities/: circle.rs  lfo.rs
crates/lpcore/src/entity/: entity_id.rs  entity_instance.rs
crates/lpcore/src/scene/: context.rs  eval_input.rs  frame_entity.rs  frame_store.rs  scene.rs  scene_config.rs  scene_node.rs  scene_value.rs
engine-core/: Cargo.toml  EXPR_REFERENCE.md
engine-core/src/: demo_program.rs  lib.rs  pixel_vm.rs  power_limit.rs  scene.rs  sin_table.rs  test_scene.rs
engine-core/src/expr/: ast.rs  codegen.rs  lexer.rs  mod.rs
engine-core/src/image/: grey.rs  rgb.rs
engine-core/src/lpscript/: README.md  TODO.md  TODO_YONA.md  ast.rs  codegen.rs  error.rs  lexer.rs  mod.rs  parser.rs  typechecker.rs
engine-core/src/lpscript/codegen/: expr.rs  functions.rs  local_allocator.rs  mod.rs  program.rs  stmt.rs
engine-core/src/math/: advanced.rs  clamping.rs  conversions.rs  dec.rs  fixed.rs  interpolation.rs  mod.rs  noise.rs  rounding.rs  trig.rs  vec2.rs  vec3.rs  vec4.rs
engine-core/src/test_engine/: demo_program.rs  mapping.rs  mapping_tests.rs  mod.rs  palette.rs  pipeline_tests.rs  render.rs  scene.rs  test_allocator.rs  test_scene.rs  vm.rs  vm_tests.rs
engine-debug/: Cargo.toml  LPS_COMPILE.md
engine-debug/src/: bench.rs  lib.rs  lp_data_demo_cli.rs  lpa_format.rs  lps_compile.rs  visualizer.rs
engine-debug/src/lp_data_demo/: mod.rs
lpcore/: Cargo.toml
lpcore/src/: config.rs  data.rs  entities.rs  entity.rs  expr.rs  lib.rs  module.rs  path.rs  scene.rs
lpcore/src/config/: config_node.rs  module_config.rs
lpcore/src/data/: size_int.rs  texture_ref.rs
lpcore/src/entities/: circle.rs  lfo.rs
lpcore/src/entity/: context.rs  entity.rs  entity_id.rs  entity_instance.rs  entity_kind_ref.rs  lfo.rs  node_instance.rs
lpcore/src/expr/: expr_node.rs
lpcore/src/module/: module_meta.rs
lpcore/src/scene/: eval_input.rs  frame_entity.rs  frame_store.rs  scene.rs  scene_config.rs  scene_def.rs  scene_entity.rs  scene_node.rs  scene_store.rs  scene_value.rs
perf-test-validator/: Cargo.toml
perf-test-validator/src/: bench.rs  main.rs  visualizer.rs
perf-test-validator/tests/: decimal_tests.rs
perf-tests-common/: Cargo.toml
perf-tests-common/src/: lib.rs  perlin3_decimal.rs  perlin3_fixed.rs  perlin3_fixed_crate.rs  perlin3_fixed_debug.rs  perlin3_float_approx.rs  perlin3_float_libm.rs  pixel_vm.rs
perf-tests-common/src/test_engine/: mapping.rs  mod.rs  render.rs  vm.rs
tools/migrations/lp-pool-to-alloc/: Cargo.toml  README.md
(+1400 files in other folders)
