[workspace]
members = [
    "crates/lpcore",
    "apps/lp-schema-gen",
    "apps/fw-esp32c3",
    "crates/engine-core",
    "apps/lp-debug",
    "crates/lp-data",
    "crates/lp-data-derive",
    "crates/lp-script", "crates/lp-math",
    "crates/lp-pool",
]
# Exclude fw-esp32c3 from default builds since it requires ESP32 target
# (it has its own .cargo/config.toml with target = "riscv32imc-unknown-none-elf")
default-members = [
    "crates/lpcore",
    "apps/lp-schema-gen",
    "crates/engine-core",
    "apps/lp-debug",
    "crates/lp-script",
    "crates/lp-data",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"
debug = 2  # Keep debug symbols for RTT/defmt logging

[profile.dev]
debug = true
opt-level = "z"

# Compile dependencies with release optimizations even in debug mode
# This gives us fast perf-tests-common while keeping RTT output working
[profile.dev.package."*"]
opt-level = 3
debug = false

# But keep our own code optimized for size in debug
[profile.dev.package.fw-esp32c3]
opt-level = "z"
debug = true
