[package]
name = "engine-core"
version = "0.1.0"
edition = "2021"

[features]
use-libm = []

[dependencies]
# Math for no_std
libm = { version = "0.2" }
fixed = { version = "1.28", default-features = false }
smart-leds = { version = "0.4", default-features = false }

# LPScript language and math library
lp-script = { path = "../crates/lp-script" }
