[package]
name = "engine-debug"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench"
path = "src/bench.rs"

[[bin]]
name = "visualizer"
path = "src/visualizer.rs"

[[bin]]
name = "lps-compile"
path = "src/lps_compile.rs"

[dependencies]
engine-core = { path = "../engine-core" }
minifb = "0.27"
embedded-graphics = "0.8"
