[package]
name = "lpcore"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive", "preserve_order"] }
serde_json = "1.0"
schemars = "1.0.3"
indexmap = "2.10.0"

[lib]
crate-type = ["rlib"]

[features]
default = ["std"]
std = []

[package.metadata.docs.rs]
features = ["std"]