[package]
name = "perf-test-validator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "validate"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"

[[bin]]
name = "visualizer"
path = "src/visualizer.rs"

[dependencies]
perf-tests-common = { path = "../perf-tests-common" }
minifb = "0.27"
embedded-graphics = "0.8"
