[package]
name = "perf-tests-common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Math for no_std
libm = { version = "0.2", optional = true }
fixed = { version = "1.28", default-features = false }

[features]
default = []
# Use libm for sin/cos (for embedded targets without std)
use-libm = ["libm"]
