[package]
name = "lp-schema-gen"
edition = "2021"

[dependencies]
lp-data = { path = "../../crates/lp-data", features = ["alloc", "schemars"] }
lp-data-derive = { path = "../../crates/lp-data-derive" }
lp-math = { path = "../../crates/lp-math", features = ["serde", "schemars"] }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"