[package]
name = "engine-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["lp-script/std"]
use-libm = ["lp-script/use-libm"]
profiling = ["dep:pprof", "dep:libc"]

[dependencies]
# Math for no_std
libm = { version = "0.2" }
fixed = { version = "1.28", default-features = false }
smart-leds = { version = "0.4", default-features = false }

# LPScript language and dec32 library
lp-script = { path = "../lp-script", default-features = false }

# Profiling support (requires std)
pprof = { version = "0.15", optional = true, features = ["flamegraph"] }
libc = { version = "0.2", optional = true }
