[package]
name = "lp-data"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = ["alloc"]
alloc = []
std = ["alloc", "serde/std", "schemars"]
serde_json = ["std", "dep:serde_json"]

[dependencies]
serde = { version = "1", features = ["derive"] }
lp-math = { path = "../lp-math" }
schemars = { version = "1.0", optional = true }

serde_json = { version = "1", optional = true }

