[package]
name = "lp-data"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = ["alloc", "derive", "serde_json"]
alloc = []
derive = ["lp-data-derive"]
serde = []
std = ["alloc", "serde/std", "schemars"]
serde_json = ["std", "dep:serde_json"]

[dependencies]
serde = { version = "1", features = ["derive"] }
lp-math = { path = "../lp-math" }
lp-alloc = { path = "../lp-alloc", default-features = false }
schemars = { version = "1.0", optional = true }
lp-data-derive = { path = "../lp-data-derive", optional = true }

serde_json = { version = "1", optional = true }

[dev-dependencies]
lp-alloc = { path = "../lp-alloc", default-features = false, features = ["std"] }

