[package]
name = "lp-pool"
version = "0.1.0"
edition = "2021"

[features]
default = ["alloc-meta", "std"]
# Allocation metadata tracking; works in both std and no_std.
alloc-meta = []
std = ["thread_local"]

[dependencies]
allocator-api2 = "0.2"
spin = { version = "0.9", features = ["portable_atomic"] }
thread_local = { version = "1.1", optional = true }

[dev-dependencies]

