[package]
name = "lp-pool"
version = "0.1.0"
edition = "2021"

[features]
default = ["alloc-meta", "std"]
# Allocation types tracking; works in both std and no_std.
alloc-meta = []
std = ["thread_local", "default_pool"]
# Default pool auto-initialization for tests (automatically enabled with std)
default_pool = []

[dependencies]
allocator-api2 = { version = "0.2", default-features = false, features = ["alloc"] }
spin = { version = "0.9", features = ["portable_atomic"] }
thread_local = { version = "1.1", optional = true }

[dev-dependencies]

