[package]
name = "lpcore"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
schemars = "1.0"
indexmap = "2.10"

[lib]
crate-type = ["rlib"]

[features]
default = ["std"]
std = []

[package.metadata.docs.rs]
features = ["std"]