[package]
name = "lp-pool-to-alloc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lp-pool-to-alloc"
path = "src/main.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.0"

